@@ -1,0 +1,4 @@
+#!/bin/sh -e
+ 
+autoreconf --install
+./configure "$@"
