@@ -1,7 +1,7 @@
 AC_INIT([Where Shall We Eat], [0.1], [davidk@openismus.com], [wswe])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIR(m4)
-AC_CONFIG_SRCDIR([src/main.c])
+AC_CONFIG_SRCDIR([src/wswe.c])
 AC_PREREQ(2.57)
 AC_CONFIG_HEADERS([config.h])
 
