@@ -1,3 +1,12 @@
+2009-02-12  David King  <davidk@openismus.com>
+
+	* autogen.sh: Add autogen script, as suggested by Michael.
+	* configure.ac: Fix AC_CONFIG_SRCDIR as pointed out by Michael.
+	* src/wswe.c (open_file_action, save_file_action, quit_file_action,
+	  add_place_action, delete_place_action, choose_place_action): Change
+	  user_data pointer from gpointer to MainWindowData pointer.
+	(about_action): Add about dialog. Change user_data pointer as above.
+
 2009-02-11  David King  <davidk@openismus.com>
 
 	Initial commit.
